--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,10 +22,13 @@ body {
   padding: 45px 30px;
   position: fixed;
   transform: translateX(-50%);
-  width: 90%;
+  max-width: 90%;
+  width: calc(100% - 40px);
   border-radius: 12px;
   box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.15);
   z-index: 300;
+  box-sizing: border-box;
+  will-change: transform;
 }
 
 .header-left {
@@ -467,6 +470,12 @@ footer {
 
 
 @media (max-width: 992px) {
+
+  .header {
+    width: calc(100% - 32px);
+    max-width: 95%;
+    padding: 45px 20px;
+  }
 
   .m-btn {
     display: block;
