--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,13 +22,10 @@ body {
   padding: 45px 30px;
   position: fixed;
   transform: translateX(-50%);
-  max-width: 90%;
-  width: calc(100% - 40px);
+  width: 90%;
   border-radius: 12px;
   box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.15);
   z-index: 300;
-  box-sizing: border-box;
-  will-change: transform;
 }
 
 .header-left {
@@ -470,12 +467,6 @@ footer {
 
 
 @media (max-width: 992px) {
-
-  .header {
-    width: calc(100% - 32px);
-    max-width: 95%;
-    padding: 45px 20px;
-  }
 
   .m-btn {
     display: block;
